fixed alignment issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1827,7 +1827,7 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
   -moz-border-radius: 6px;
   border-radius: 6px;
   overflow: hidden;
-  background-color: #ecf0f1;
+  background-color: bg-clouds;
   -webkit-transition: background-color 0.4s;
   -moz-transition: background-color 0.4s;
   -o-transition: background-color 0.4s;
@@ -1864,7 +1864,7 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
   left: 0;
   top: 0;
   text-align: center;
-  color: #fff;
+  color:#fff;
   line-height: 180px;
   opacity: 0;
   filter: alpha(opacity=0);
@@ -1891,7 +1891,7 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
   color: #95a5a6;
   margin-top: 36px;
   line-height: 1.4;
-  text-align: left;
+  text-align: center;
 }
 .crew-4 .members .info b {
   color: #7f8c8d;
